--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
 .container1 .person .avatar img{
     border-radius: 100%;
     width: 50px;
+    height: 50px
 }
 .person .avatar .name{
     font-family: 'monrope', sans-serif;
